--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     </head>
     <body>
     <noscript><a>No javascript enabled. Please refresh the page to get a new Blåhaj.</a></noscript>
-        <a href="document.getElementById('imageframe').contentDocument.location.reload(true);
-    "><button>Refresh</button></a>     <a href="https://github.com/td00/blahaj.art"><button>Contribute</button></a><br />   <a>Every refresh a random Blåhaj.</a>
+        <button onclick="document.getElementById('imageframe').contentDocument.location.reload(true);">Refresh</button>     <a href="https://github.com/td00/blahaj.art"><button>Contribute</button></a><br />   <a>Every refresh a random Blåhaj.</a>
         <iframe id="imageframe" src="/image.php" frameBorder="0" width="100%" height="100%">Couldn't load frame content</iframe>
 
 
