added script & fram disclaimer.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <body>
     <noscript><a>No javascript enabled. Please refresh the page to get a new Blåhaj.</a></noscript>
         <button onclick="document.getElementById('imageframe').contentDocument.location.reload(true);">Refresh</button>     <a href="https://github.com/td00/blahaj.art"><button>Contribute</button></a><br />   <a>Every refresh a random Blåhaj.</a>
-        <iframe id="imageframe" src="/image.php" frameBorder="0" width="100%" height="100%">Couldn't load frame content</iframe>
+        <iframe id="imageframe" src="/image.php" frameBorder="0" width="100%" height="100%">Here should be a iframe containing a beautiful Blåhaj image. But somehow the iframe wont load. Maybe a script blocker?</iframe>
 
 
 <br />
 <br />
+<a>Displays image in an iframe and the "Refresh" Button is some javascript. If you don't want to use such modern technologies, please just use </a><a href="image.php">image.php</a><a> and reload it yourself (F5 or something like that..).</a>
+
 <a href="https://thiesmueller.de">Contact me</a>
 <br />
 <a href="https://github.com/td00/blahaj.art">GitHub Project</a>
